fixed nav transition jumping

--- a/css/nav.css
+++ b/css/nav.css
@@ -263,8 +263,9 @@
     right: 60px;
     width: 120px;
     font-size: 2em;
-    transform: translateX(0);
-    transition: transform 0.4s ease-out;
+    border: 5px solid rgba(0,0,0,0);
+    opacity: 1;
+    transition: opacity 0.3s;
   }
 
   #nav-link-home a {
@@ -289,8 +290,7 @@
   }
 
   nav.off #nav-link-home {
-    transform: translateX(200px);
-    border: 5px solid rgba(0,0,0,0);
+    opacity: 0;
   }
 
   nav.off #nav-link-home.cycled {
